0.6.6/_sources/gallery/grid_mode.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/grid_mode.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_grid_mode.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_grid_mode.py:


Grid mode
=========

Display layers in a grid using the `viewer.grid` API. When grid is enabled,
layers are automatically arranged - based on the stride, height, and width parameters -
in a grid of viewboxes linked to the main Camera and Dims. Viewer overlays such as
scale_bar can also be shown in a gridded manner.

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 12-38



.. image-sg:: /gallery/images/sphx_glr_grid_mode_001.png
   :alt: grid mode
   :srcset: /gallery/images/sphx_glr_grid_mode_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    from skimage import data

    import napari

    viewer = napari.Viewer()
    layers = viewer.add_image(data.lily(), channel_axis=2)

    viewer.grid.enabled = True
    # a stride of 2 means that two consecutive layers are placed in each
    # viewbox instead of just one
    viewer.grid.stride = 2
    # we leave width and height as -1, automatically resulting in a square grid

    # setting the spacing to a value between 0 and 1 adds a padding between
    # viewboxes relative to their sizes. Setting to a value greater than 1
    # results in a padding of that exact number of pixels instead.
    viewer.grid.spacing = 0.1

    viewer.scale_bar.visible = True
    viewer.scale_bar.box = True
    # show scalebar in each grid instead of just once
    viewer.scale_bar.gridded = True

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_grid_mode.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: grid_mode.ipynb <grid_mode.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: grid_mode.py <grid_mode.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: grid_mode.zip <grid_mode.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
